# Kentavr_analytics

./: .env.example  README.md  settings.example.toml  Методика формирования прогнозов новостных заголовков.docx
docs/: architecture.md
news_forecast_orchestrator/: README.md  pyproject.toml  settings.example.toml
news_forecast_orchestrator/docs/: architecture.md
news_forecast_orchestrator/prompts/: step1_event_search.md  step4_comparison.md
news_forecast_orchestrator/src/news_forecast_orchestrator/: cli.py  compare_outputs.py  config.py  formatter.py  parser.py  prompts.py  readme_builder.py  session.py
news_forecast_orchestrator/src/news_forecast_orchestrator/providers/: __init__.py  base.py  manual_provider.py  qwen_provider.py
news_forecast_orchestrator/src/news_forecast_orchestrator/steps/: compare_outputs.py  step1_event_search.py  step3_outlet_style.py
prompts/: step2_trend_scenarios.md  step3_outlet_style.md  step4_generation.md  step5_editorial_committee.md
src/news_forecast_orchestrator/: __init__.py  cli.py  config.py  formatter.py  models.py  parser.py  prompts.py  readme_builder.py  storage.py
src/news_forecast_orchestrator/providers/: deepseek_provider.py  openai_provider.py
src/news_forecast_orchestrator/steps/: __init__.py  step2_trend_scenarios.py  step4_generation.py
